--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build Bazzite
 on:
   schedule:
-    - cron: "10 2 * * *" # 2am-ish UTC everyday (timed against official fedora container pushes, and after 'config')
+    - cron: "30 2 * * *" # 2:30am UTC everyday (timed against ublue akmods container pushes)
   pull_request:
     branches:
       - testing
