--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -388,7 +388,7 @@ jobs:
         id: registry_case
         uses: ASzc/change-string-case-action@v6
         with:
-          string: 
+          string: ghcr.io/${{ github.repository_owner }}
 
       # Push the image to GHCR (Image Registry)
       - name: Push To GHCR
