--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -416,6 +416,7 @@ jobs:
           containers: ${{ env.IMAGE_NAME }}
           registry-token: ${{ secrets.GITHUB_TOKEN }}
           signing-secret: ${{ secrets.SIGNING_SECRET }}
+          registry: ${{ steps.registry_case.outputs.lowercase }}
           tags: ${{ steps.push.outputs.outputs && fromJSON(steps.push.outputs.outputs).digest }}
 
       - name: Echo outputs
