--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -279,7 +279,7 @@ jobs:
           version: '${{ steps.generate-version.outputs.tag }}'
           skip_compression: 1
           labels: |
-            io.artifacthub.package.logo-url=https://raw.githubusercontent.com/ublue-os/bazzite/main/repo_content/logo.png
+            io.artifacthub.package.logo-url=https://raw.githubusercontent.com/apoordev/bazzite/main/repo_content/logo.png
             io.artifacthub.package.readme-url=https://docs.bazzite.gg
             org.opencontainers.image.created=<timestamp>
             org.opencontainers.image.description=Bazzite is a custom image built upon Fedora Atomic Desktops that brings the best of Linux gaming to all of your devices - including your favorite handheld.
@@ -424,12 +424,12 @@ jobs:
         run: |
           echo "${{ toJSON(steps.push.outputs) }}"
 
-  generate_release:
-    name: Generate Release
-    needs: [push-ghcr]
-    if: github.event_name != 'pull_request'
-    secrets: inherit
-    uses: ./.github/workflows/generate_release.yml
+#  generate_release:
+#    name: Generate Release
+#    needs: [push-ghcr]
+#    if: github.event_name != 'pull_request'
+#    secrets: inherit
+#    uses: ./.github/workflows/generate_release.yml
 
   build_iso:
     name: Build ISO
