--- a/.github/workflows/build_iso.yml
+++ b/.github/workflows/build_iso.yml
@@ -153,18 +153,18 @@ jobs:
           compression-level: 0
           overwrite: true
 
-      - name: Upload ISOs and Checksum to R2
-        if: github.event_name == 'workflow_dispatch' && github.ref_name == 'main'
-        shell: bash
-        env:
-          RCLONE_CONFIG_R2_TYPE: s3
-          RCLONE_CONFIG_R2_PROVIDER: Cloudflare
-          RCLONE_CONFIG_R2_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
-          RCLONE_CONFIG_R2_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
-          RCLONE_CONFIG_R2_REGION: auto
-          RCLONE_CONFIG_R2_ENDPOINT: ${{ secrets.R2_ENDPOINT }}
-          SOURCE_DIR: ${{ steps.upload-directory.outputs.iso-upload-dir }}
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y rclone
-          rclone copy $SOURCE_DIR R2:bazzite
+#      - name: Upload ISOs and Checksum to R2
+#        if: github.event_name == 'workflow_dispatch' && github.ref_name == 'main'
+#        shell: bash
+#        env:
+#          RCLONE_CONFIG_R2_TYPE: s3
+#          RCLONE_CONFIG_R2_PROVIDER: Cloudflare
+#          RCLONE_CONFIG_R2_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
+#          RCLONE_CONFIG_R2_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
+#          RCLONE_CONFIG_R2_REGION: auto
+#          RCLONE_CONFIG_R2_ENDPOINT: ${{ secrets.R2_ENDPOINT }}
+#          SOURCE_DIR: ${{ steps.upload-directory.outputs.iso-upload-dir }}
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y rclone
+#          rclone copy $SOURCE_DIR R2:bazzite
